--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "version": "0.1.0",
   "dependencies": {
-      "octalbonescript": "1.1.1",
+      "octalbonescript": "latest",
       "express": "latest"
   },
   "engines": {
