--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "resin-beaglebone-demo",
-  "description": "read ADC values with node.js on the Beaglebone using resin.io",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/shaunmulligan/beaglebone-adc-node.git"
-  },
-  "scripts": {
-    "prestart":"bash before-node-start.sh",
-    "start": "node adc.js"
-  },
-  "version": "0.1.0",
-  "dependencies": {
-      "octalbonescript": "latest",
-      "express": "latest"
-  },
-  "engines": {
-      "node": "0.10.38"
-  }
+    "name": "beaglebone-homeautomation",
+    "description": "Home automation hub with BBB",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/shaunmulligan/beaglebone-adc-node.git"
+    },
+    "scripts": {
+        "prestart":"bash before-node-start.sh",
+        "start": "node adc.js"
+    },
+    "version": "0.1.0",
+    "dependencies": {
+        "octalbonescript": "latest",
+        "express": "latest",
+        "mqtt": "latest"
+    }
 }
