--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "version": "0.1.5",
     "dependencies": {
         "onoff": "latest",
-        "octalbonescript": "1.1.x",
         "express": "latest",
-        "mqtt": "latest"
+        "mqtt": "latest",
+        "owfs": "latest"
+        
     }
 }
