fix owserver startup

--- a/supervisor/owserver.conf
+++ b/supervisor/owserver.conf
@@ -1,5 +1,6 @@
 [program:owserver]
-command=/usr/bin/owserver --foreground
+command=/usr/bin/owserver -c /etc/owfs.conf --foreground
 autostart=true
 autorestart=true
 redirect_stderr=true
+startsecs=10
