Add influxdb, re-jigger config file locations

--- a/supervisor/owserver.conf
+++ b/supervisor/owserver.conf
@@ -1,5 +1,5 @@
 [program:owserver]
-command=/usr/bin/owserver -c /etc/owfs.conf --foreground
+command=/usr/bin/owserver -c /app/etc/owfs.conf --foreground
 autostart=true
 autorestart=true
 redirect_stderr=true
