--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
+    "author": "Riku Lindblad",
     "name": "beaglebone-homeautomation",
+    "license": "MIT", 
     "description": "Home automation hub with BBB",
+    "version": "0.1.5",
+
     "repository": {
         "type": "git",
         "url": "https://github.com/lepinkainen/bbb-node-resin"
     },
-    "scripts": {
-        "prestart":"bash before-node-start.sh",
-        "start": "node adc.js"
-    },
-    "version": "0.1.5",
+
     "dependencies": {
         "onoff": "latest",
         "express": "latest",
