Add ow-shell, owfs and group onwire to a supervisor group

--- a/supervisor/owserver.conf
+++ b/supervisor/owserver.conf
@@ -3,4 +3,12 @@ command=/usr/bin/owserver -c /app/etc/owfs.conf --foreground
 autostart=true
 autorestart=true
 redirect_stderr=true
-startsecs=10
+
+[program:owfs]
+command=/usr/bin/owfs -c /app/etc/owfs.conf --foreground
+autostart=true
+autorestart=true
+redirect_stderr=true
+
+[group:onewire]
+programs=owserver,owfs
