Separate gpio to own process

--- a/supervisor/node-gpio.conf
+++ b/supervisor/node-gpio.conf
@@ -1,5 +1,5 @@
-[program:node-main]
-command=node /app/adc.js
+[program:node-gpio]
+command=node /app/gpio.js
 autostart=true
 autorestart=true
 redirect_stderr=true
