--- a/supervisord.conf
+++ b/supervisord.conf
@@ -19,10 +19,11 @@
 logfile=/tmp/supervisord.log ; (main log file;default $CWD/supervisord.log)
 logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
 logfile_backups=10           ; (num of main logfile rotation backups;default 10)
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
 loglevel=info                ; (log level;default info; others: debug,warn,trace)
 pidfile=/tmp/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 nodaemon=true                ; (start in foreground if true;default false)
-;environment=KEY=value       ; (key value pairs to add to environment)
 strip_ansi=true              ; (strip ansi escape codes in logs; def. false)
 
 ; the below section must remain in the config file for RPC
