Re-add dropbear with port 2222

--- a/supervisor/dropbear.conf
+++ b/supervisor/dropbear.conf
@@ -1,5 +1,5 @@
 [program:dropbear]
-command=/usr/sbin/dropbear -F
+command=/usr/sbin/dropbear -F -p 2222
 autostart=true
 autorestart=true
 redirect_stderr=true
