Add owserver for debugging

--- a/supervisor/owserver.conf
+++ b/supervisor/owserver.conf
@@ -10,5 +10,11 @@ autostart=true
 autorestart=true
 redirect_stderr=true
 
+[program:owhttpd]
+command=/usr/bin/owhttpd -c /app/etc/owfs.conf --foreground
+autostart=true
+autorestart=true
+redirect_stderr=true
+
 [group:onewire]
-programs=owserver,owfs
+programs=owserver,owfs,owhttpd
