Attempt at a non-looping event listener

--- a/supervisor/processmanager.conf
+++ b/supervisor/processmanager.conf
@@ -1,3 +1,7 @@
 [eventlistener:processmanager]
 command=/app/processmanager.py
-events=PROCESS_STATE
+events=PROCESS_STATE,TICK_60
+buffer_size=50
+autostart=true
+autorestart=unexpected
+
